--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,5 +1,17 @@
 #!/bin/bash
 
+export PATH=${OPENSHIFT_HOMEDIR}app-root/runtime/bin/:${PATH}
+export COMPOSER_HOME="$OPENSHIFT_DATA_DIR/.composer"
+
+if [ ! -f "$OPENSHIFT_DATA_DIR/composer.phar" ]; then
+    curl -s https://getcomposer.org/installer | php -- --install-dir=$OPENSHIFT_DATA_DIR
+else
+    php $OPENSHIFT_DATA_DIR/composer.phar self-update
+fi
+
+export PATH=${COMPOSER_HOME}/:${PATH}
+unset GIT_DIR
+
 OPENSHIFT_RUNTIME_DIR=${OPENSHIFT_HOMEDIR}/app-root/runtime
 
 LOG_FILE=${OPENSHIFT_LOG_DIR}build_log
