--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -90,8 +90,8 @@ ErrorLog ${OPENSHIFT_DIY_LOG_DIR}/error_log
 LogLevel error
 CustomLog ${OPENSHIFT_DIY_LOG_DIR}/access_log combined
 
-DocumentRoot ${OPENSHIFT_REPO_DIR}/www
-<Directory "${OPENSHIFT_REPO_DIR}/www">
+DocumentRoot ${OPENSHIFT_REPO_DIR}
+<Directory "${OPENSHIFT_REPO_DIR}">
 	Options +Indexes +FollowSymLinks +ExecCGI
 	AddHandler cgi-script .cgi
 	AllowOverride All
